<resources>
    <string name="app_name">Distress Calls Manager</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Enter username here</string>
    <string name="password_label">Password:</string>
    <string name="password_input_hint">Enter password here</string>
    <string name="add_button_text">Add</string>
    <string name="username_text">Username</string>
    <string name="login_button_text">Login</string>
    <string name="username_input">XXXXXXXXXX</string>
    <string name="password_check_text">change password</string>
    <string name="update_button_text">Update</string>
    <string name="type_label">Type:</string>
    <string name="priority_label">Priority:</string>
    <string name="priority_input">X</string>
    <string name="caller_name_label">Caller Name:</string>
    <string name="caller_name_input_hint">Enter caller name here</string>
    <string name="caller_phone_num_label">Caller Phone Number:</string>
    <string name="caller_phone_num_input">XXXXXXXXXX</string>
    <string name="caller_loc_label">Caller Location:</string>
    <string name="caller_loc_input_hint">Enter caller location here</string>
    <string name="description_label">Description:</string>
    <string name="description_input_hint">Enter description here</string>
    <string name="rec_call_path_label">Recorded Call Path:</string>
    <string name="rec_call_path_input">XXXXXXXXXX</string>
    <string name="datetime_received_label">Date/Time Received:</string>
    <string name="datetime_received_input">XXXXXXXXXX</string>
    <string name="caller_name_text">Caller Name</string>
    <string name="priority_text">Priority</string>
    <string name="datetime_text">Date/Time</string>
    <string name="caller_name_input">XXXXXXXXXX</string>
    <string name="caller_loc_input">XXXXXXXXXX</string>
    <string name="description_input">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="logout_text">Logout</string>
    <string name="view_distress_call_info_list_text">View Distress Call Info List</string>
    <string name="view_distress_call_managers_list_text">View Distress Call Managers List</string>
    <string name="delete_button_text">Delete</string>
    <string name="rec_call_label">Recorded Call:</string>
    <string name="id_label">ID:</string>
</resources>
