<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/type_label"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerItems" />

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/priority_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/priority_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/priority_input"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/caller_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/caller_name_label"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/caller_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/caller_name_input_hint"
                android:inputType="textPersonName"
                android:text="@string/caller_name_input" />

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/caller_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/caller_phone_num_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/caller_phone_num_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/caller_phone_num_input"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/caller_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/caller_loc_label"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/caller_loc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/caller_loc_input_hint"
                android:inputType="text"
                android:text="@string/caller_loc_input" />

        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/description_label"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/description_input_hint"
                android:inputType="textMultiLine"
                android:text="@string/description_input" />

        </TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/rec_call_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/rec_call_path_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rec_call_path_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/rec_call_path_input"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/datetime_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/datetime_received_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/datetime_received_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/datetime_received_input"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView />

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="updateButtonClicked"
                android:text="@string/update_button_text" />

        </TableRow>

    </TableLayout>

</ScrollView>